network_test/deployment.yaml
# namespace作成
apiVersion: v1
kind: Namespace
metadata:
  name: ns-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-b
---
# pod作成
apiVersion: v1
kind: Pod
metadata:
  name: nginx-a1
  namespace: ns-a
  labels:
    app: np1
spec:
  containers:
    - name: nginx-container
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-a2
  namespace: ns-a
  labels:
    app: np2
spec:
  containers:
    - name: nginx-container
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-b1
  namespace: ns-b
  labels:
    app: np3
spec:
  containers:
    - name: nginx-container
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-b2
  namespace: ns-b
  labels:
    app: np4
spec:
  containers:
    - name: nginx-container
      image: nginx
