network_test/pod.yaml
# namespace作成
apiVersion: v1
kind: Namespace
metadata:
  name: test1
---
# pod作成
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: test1
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
      - containerPort: 80
